// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Svg - Fill fill-amber-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        Object {
          "type": 0,
          "value": 4294966251,
        }
      }
      propList={
        Array [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-black 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        Object {
          "type": 0,
          "value": 4278190080,
        }
      }
      propList={
        Array [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-blue-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        Object {
          "type": 0,
          "value": 4293916415,
        }
      }
      propList={
        Array [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-cyan-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        Object {
          "type": 0,
          "value": 4293721855,
        }
      }
      propList={
        Array [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-emerald-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        Object {
          "type": 0,
          "value": 4293721589,
        }
      }
      propList={
        Array [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-fuchsia-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        Object {
          "type": 0,
          "value": 4294833407,
        }
      }
      propList={
        Array [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-gray-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        Object {
          "type": 0,
          "value": 4294572795,
        }
      }
      propList={
        Array [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-green-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        Object {
          "type": 0,
          "value": 4293983732,
        }
      }
      propList={
        Array [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-indigo-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        Object {
          "type": 0,
          "value": 4293849855,
        }
      }
      propList={
        Array [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-lime-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        Object {
          "type": 0,
          "value": 4294442727,
        }
      }
      propList={
        Array [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-neutral-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        Object {
          "type": 0,
          "value": 4294638330,
        }
      }
      propList={
        Array [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-orange-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        Object {
          "type": 0,
          "value": 4294965229,
        }
      }
      propList={
        Array [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-pink-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        Object {
          "type": 0,
          "value": 4294832888,
        }
      }
      propList={
        Array [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-purple-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        Object {
          "type": 0,
          "value": 4294637055,
        }
      }
      propList={
        Array [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-red-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        Object {
          "type": 0,
          "value": 4294898418,
        }
      }
      propList={
        Array [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-rose-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        Object {
          "type": 0,
          "value": 4294963698,
        }
      }
      propList={
        Array [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-sky-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        Object {
          "type": 0,
          "value": 4293982719,
        }
      }
      propList={
        Array [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-slate-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        Object {
          "type": 0,
          "value": 4294507260,
        }
      }
      propList={
        Array [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-stone-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        Object {
          "type": 0,
          "value": 4294638329,
        }
      }
      propList={
        Array [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-teal-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        Object {
          "type": 0,
          "value": 4293983738,
        }
      }
      propList={
        Array [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-transparent 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        Object {
          "type": 0,
          "value": 0,
        }
      }
      propList={
        Array [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-violet-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        Object {
          "type": 0,
          "value": 4294308863,
        }
      }
      propList={
        Array [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-white 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        Object {
          "type": 0,
          "value": 4294967295,
        }
      }
      propList={
        Array [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-yellow-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        Object {
          "type": 0,
          "value": 4294900968,
        }
      }
      propList={
        Array [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Svg - Fill fill-zinc-50 1`] = `
<RNSVGSvgView
  bbHeight="100%"
  bbWidth="100%"
  focusable={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup>
    <RNSVGCircle
      cx="0"
      cy="0"
      fill={
        Object {
          "type": 0,
          "value": 4294638330,
        }
      }
      propList={
        Array [
          "fill",
        ]
      }
      r="0"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;
